--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,11 @@
     </properties>
     <dependencies>
         <dependency>
+            <groupId>cn.ichensw</groupId>
+            <artifactId>neroapi-client-sdk</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-freemarker</artifactId>
         </dependency>
