--- a/nero-api-admin/pom.xml
+++ b/nero-api-admin/pom.xml
@@ -30,10 +30,27 @@
             <groupId>cn.ichensw</groupId>
             <artifactId>nero-api-common</artifactId>
         </dependency>
-        <!--framework框架核心-->
+        <!-- SpringBoot Web -->
         <dependency>
-            <groupId>cn.ichensw</groupId>
-            <artifactId>nero-api-framework</artifactId>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+        <!-- SpringBoot AOP-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-aop</artifactId>
+        </dependency>
+        <!-- Spring Boot Configuration Processor-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-configuration-processor</artifactId>
+            <optional>true</optional>
+        </dependency>
+        <!-- Spring Boot Test-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+            <scope>test</scope>
         </dependency>
         <!-- devtools -->
         <dependency>
