--- a/nero-api-admin/pom.xml
+++ b/nero-api-admin/pom.xml
@@ -52,6 +52,12 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
+        <!-- OSS文件上传 -->
+        <dependency>
+            <groupId>com.aliyun.oss</groupId>
+            <artifactId>aliyun-sdk-oss</artifactId>
+            <version>3.15.1</version>
+        </dependency>
         <!-- devtools -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
