--- a/nero-api-admin/src/main/resources/application-prod.yml
+++ b/nero-api-admin/src/main/resources/application-prod.yml
@@ -8,9 +8,9 @@ spring:
   # todo 需替换配置
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/nero_api
-    username: root
-    password: root
+    url: jdbc:mysql://124.70.63.241:3306/nero_api
+    username: nero_api
+    password: XWdzniGryTTR8zcp
   # Redis 配置
   # todo 需替换配置
   redis:
@@ -18,7 +18,7 @@ spring:
     host: localhost
     port: 6379
     timeout: 5000
-    password: 123456
+#    password:
   # Elasticsearch 配置
   # todo 需替换配置
   elasticsearch:
