--- a/pom.xml
+++ b/pom.xml
@@ -6,6 +6,20 @@
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 
     <modelVersion>4.0.0</modelVersion>
+    <packaging>pom</packaging>
+
+    <modules>
+        <module>nero-api-admin</module>
+        <module>nero-api-gateway</module>
+        <module>nero-api-interface</module>
+        <module>nero-api-common</module>
+    </modules>
+
+    <parent>
+        <artifactId>spring-boot-starter-parent</artifactId>
+        <groupId>org.springframework.boot</groupId>
+        <version>2.7.0</version>
+    </parent>
 
     <groupId>cn.ichensw</groupId>
     <artifactId>nero-api-backend</artifactId>
@@ -65,65 +79,9 @@
                 <artifactId>nero-api-common</artifactId>
                 <version>${nero-api.version}</version>
             </dependency>
-            <!--Web核心模块-->
-            <dependency>
-                <groupId>cn.ichensw</groupId>
-                <artifactId>nero-api-framework</artifactId>
-                <version>${nero-api.version}</version>
-            </dependency>
         </dependencies>
     </dependencyManagement>
 
 
-    <modules>
-        <module>nero-api-admin</module>
-        <module>nero-api-gateway</module>
-        <module>nero-api-interface</module>
-        <module>nero-api-common</module>
-    </modules>
-    <packaging>pom</packaging>
-
-    <dependencies>
-    </dependencies>
-
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.1</version>
-                <configuration>
-                    <source>${java.version}</source>
-                    <target>${java.version}</target>
-                    <encoding>${project.build.sourceEncoding}</encoding>
-                </configuration>
-            </plugin>
-        </plugins>
-    </build>
-
-    <repositories>
-        <repository>
-            <id>public</id>
-            <name>aliyun nexus</name>
-            <url>https://maven.aliyun.com/repository/public</url>
-            <releases>
-                <enabled>true</enabled>
-            </releases>
-        </repository>
-    </repositories>
-
-    <pluginRepositories>
-        <pluginRepository>
-            <id>public</id>
-            <name>aliyun nexus</name>
-            <url>https://maven.aliyun.com/repository/public</url>
-            <releases>
-                <enabled>true</enabled>
-            </releases>
-            <snapshots>
-                <enabled>false</enabled>
-            </snapshots>
-        </pluginRepository>
-    </pluginRepositories>
 
 </project>
