--- a/nero-api-interface/src/main/resources/application.yml
+++ b/nero-api-interface/src/main/resources/application.yml
@@ -2,7 +2,7 @@ server:
   port: 8123
 #  servlet:
 #    context-path: /api
-nero:
-  client:
-    access-key: nero
-    secret-key: abcdefgh
+#nero:
+#  client:
+#    access-key: nero
+#    secret-key: abcdefgh
