--- a/nero-api-admin/src/main/resources/application.yml
+++ b/nero-api-admin/src/main/resources/application.yml
@@ -12,7 +12,6 @@ spring:
     pathmatch:
       matching-strategy: ant_path_matcher
   # Redis 配置
-  # todo 需替换配置，然后取消注释
   redis:
     database: 0
     host: 127.0.0.1
@@ -29,9 +28,9 @@ spring:
   # todo 需替换配置
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://124.70.63.241:3306/nero_api
-    username: nero_api
-    password: XWdzniGryTTR8zcp
+    url: jdbc:mysql://localhost:3306/chengapi
+    username: root
+    password: thc
   # Elasticsearch 配置
   # todo 需替换配置，然后取消注释
   #  elasticsearch:
@@ -113,4 +112,4 @@ dubbo:
     port: -1
   registry:
     id: nacos-registry
-    address: nacos://42.192.149.3:8848
+    address: nacos://127.0.0.1:8848
