--- a/nero-api-gateway/src/main/resources/application.yml
+++ b/nero-api-gateway/src/main/resources/application.yml
@@ -13,6 +13,7 @@ spring:
     host: localhost
     port: 6379
     database: 1
+    password: thc
 
 logging:
   level:
@@ -28,5 +29,5 @@ dubbo:
     port: -1
   registry:
     id: nacos-registry
-    address: nacos://42.192.149.3:8848
+    address: nacos://127.0.0.1:8848
 
